apps/cradle/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cradle-web
  namespace: cradle
spec:
  selector:
    app: cradle-web
  ports:
  - port: 80
    targetPort: 3000
